--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,47 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>ProjTest</title>
-  <base href="/">
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-140798126-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
+    gtag('config', 'UA-140798126-1');
+  </script>
+  <script type="text/javascript" >
+    (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+    m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+    (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+    ym(53802859, "init", {
+         clickmap:true,
+         trackLinks:true,
+         accurateTrackBounce:true,
+         webvisor:true
+    });
+  </script>
+  <meta charset="utf-8">
+  <title>Кредит / Лизинг на покупку автомобиля</title>
+
+  <meta name="Description" content="Кредит и лизинг автомобилей с пробегом. Выгодные, низкие процентные ставки, быстрое рассмотрение, минимальный пакет документов, любой автомобиль"/>
+
+  <meta name="Keywords" content="кредит на бу авто, бу авто в кредит, кредит на авто, авто в кредит, автокредит, купить авто в кредит, купить бу авто в кредит, авто с пробегом в кредит, авто в кредит в минске, авто +в кредит +в беларуси, кредит авто без, авто в кредит без взноса, авто в кредит без первоначального, купить авто в беларуси в кредит, авто в кредит без первоначального взноса, купить авто" />
+  <base href="/">
+  <meta name="yandex-verification" content="2b6615381f5b0f92" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body style="margin: 0;">
+  <noscript>
+    <div>
+      <img src="https://mc.yandex.ru/watch/53802859" style="position:absolute; left:-9999px;" alt="" />
+    </div>
+  </noscript>
+  <!-- Yandex.Metrika counter -->
+
+<!-- /Yandex.Metrika counter -->
   <app-root></app-root>
 </body>
 </html>
