added phone maintain

--- a/src/index.html
+++ b/src/index.html
@@ -42,6 +42,8 @@
   <!-- Yandex.Metrika counter -->
 
 <!-- /Yandex.Metrika counter -->
-  <app-root></app-root>
+  <div style="overflow-x: hidden">
+    <app-root></app-root>
+  </div>
 </body>
 </html>
