Replaced credit/lising calculator

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   <!-- <meta name="theme-color" content="#1976d2"> -->
   <link href="css/main.css" rel="stylesheet">
   <script src="js/index.js" type="text/javascript"></script>
+  <title>Б/у машины в кредит, лизинг, рассрочку</title>
 </head>
 
 <body>
@@ -33,7 +34,7 @@
       <nav class="desktopNav">
         <div class="emptyDivForPositionLogo"></div>
           <a href="#">AV-Finance</a>
-          <a href="#">Калькулятор кредита и лизинга</a>
+          <a href="credit-calculator.html">Калькулятор кредита и лизинга</a>
           <a href="#">Калькулятор рассрочки</a>
             <!-- <li class="emptyDivForPositionLogo"></li> -->
 
